--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,25 @@
-[tool.poetry]
+[project]
 name = "altlinker"
 version = "0.0.1"
 description = ""
-authors = ["Admin <sehraramiz@disroot.org>"]
+authors = [{ name = "Admin", email = "sehraramiz@disroot.org" }]
+requires-python = "~=3.10"
+dependencies = [
+    "starlette>=0.40.0,<0.41",
+    "httpx>=0.23.3,<0.24",
+    "uvicorn>=0.21.1,<0.22",
+    "pytelegrambotapi>=4.10.0,<5",
+    "aiohttp>=3.10.11,<4",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-starlette = "^0.40.0"
-httpx = "^0.23.3"
-uvicorn = "^0.21.1"
-pytelegrambotapi = "^4.10.0"
-aiohttp = "^3.10.11"
-
-[tool.poetry.dev-dependencies]
-pytest="*"
-black="*"
-mypy="*"
-ruff="*"
-isort="*"
+[dependency-groups]
+dev = [
+    "pytest",
+    "black",
+    "mypy",
+    "ruff",
+    "isort",
+]
 
 [tool.black]
 line-length = 79
